added authentication and authorization
